--- a/rollease2mqtt/config.json
+++ b/rollease2mqtt/config.json
@@ -5,7 +5,7 @@
   "description": "An MQTT gateway for Rollease blinds",
   "url": "https://github.com/quentinsf/rollease2mqtt",
   "arch": ["armhf", "armv7", "aarch64", "amd64", "i386"],
-  "startup": "before",
+  "startup": "services",
   "boot": "auto",
   "options": {
     "mqtt_url": "mqtt://hassio-mqtt:9qaHD6@192.168.0.31",
@@ -16,6 +16,6 @@
     "mqtt_url": "str",
     "device": "str"
   },
-  "auto_uart": true,
+  "uart": true,
   "image": "quentinsf/image-{arch}-rollease2mqtt"
 }
